# rest_api_auth_manager

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
src/rest_api_auth_manager/: __init__.py  config.py  repository.py
src/rest_api_auth_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  docker-compose.yml  test_unit.py
