[project]
name = "rest_api_auth_manager"
version = "1.0.2"
authors = [
  { name="gxara", email="gabrielxara@gmail.com" },
]
description = "Simple manager for REST API authentication and authorization (token based)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gxara/rest_api_auth_manager"
"Bug Tracker" = "https://github.com/gxara/rest_api_auth_manager/issues"
